<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>l0voj_turtle_cpp</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="wonjjw98@gmail.com">l0voj</maintainer>
  <license>TODO: License declaration</license>

  <!-- <아래에 필요한 인터페이스(재료) 작성> -->
  <depend>rclcpp</depend> 
  <depend>std_msgs</depend>
  <!-- <~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~>-->

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
